# uiucprescon_build

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Jenkinsfile  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  sonar-project.properties  tox.ini
.github/workflows/: tox_matrix.yml
ci/docker/linux/jenkins/: Dockerfile  apt-packages.txt
ci/docker/linux/tox/: Dockerfile  apt-packages.txt
ci/docker/linux/tox/conan/: profile.ini
ci/docker/windows/: Dockerfile
ci/docker/windows/msvc/: install_msvc.ps1
ci/docker/windows/scoop/: scoopfile.json  verifyenv.ps1
ci/docker/windows/tox/: Dockerfile  install_msvc.ps1
ci/docker/windows/tox/chocolatey/: packages.xml  verifyenv.ps1
ci/docker/windows/tox/msvc/: install_msvc.ps1
ci/jenkins/scripts/: new-uv-global-config.ps1
docs/: index.rst  quickstart.rst  setup_dev_env.rst
requirements/: requirements-ci-freeze.txt  requirements-dev.in  requirements-dev.txt
tests/: conan_test_libraries.json  test_conan_libs.py  test_deps.py  test_integration.py  test_utils.py
tests/test_files/pybind_only/: conanfile.py  pyproject.toml  setup.py  spamextension.cpp
tests/test_files/zstd_from_conan/: conanfile.py  setup.py  spamextension.cpp
