[build-system]
requires = ["setuptools>=77.0.0", 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "uiucprescon.build"
description = "Builder for python projects that require C or C++ dependencies or bindings"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
version = "0.2.6b16"

dependencies = [
    "setuptools>=77.0.1",
    'wheel',
    "cmake",
    'pybind11~=2.10.1',
    'patchelf; sys_platform == "linux"',
    "conan",
    'toml',
    'PyYAML',
    "commitizen>=4.8.3",
    "pre-commit>=4.2.0",
]
readme = "README.md"
license = "NCSA"
requires-python = ">=3.9"

[project.entry-points."distutils.commands"]
build_ext_info = "uiucprescon.build.introspection:BuildExtInfo"
build_conan = "uiucprescon.build.conan_libs:BuildConan"

###############################################################################
#                               TOOLS
###############################################################################
[tool.bandit]
exclude_dirs = ["tests", "src/uiucprescon/build/msvc"]

[tool.coverage.run]
relative_files = false
branch = true
source = [
    "src",
]

[tool.coverage.report]
include_namespace_packages= true

[tool.mypy]
mypy_path = "src"

[tool.pylint.'MESSAGES CONTROL']
# docstrings linting should be handled by pydocstyle instead of pylint
#disable = """
#    missing-module-docstring,
#    missing-function-docstring
#"""
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring"
]
[tool.ruff]
line-length = 79
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "D",
    "E3", "E4", "E7", "E9", "E501",
    "F",
    "PLW",
    "PLC",
    "Q",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.setuptools]
packages = [
    'uiucprescon.build',
    'uiucprescon.build.conan',
]
package-dir = {"" = "src"}

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "requirements-dev.txt" }]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch${prerelease}"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_merge_prerelease = true
